objects/vlocity_ins__XOMEventListener__mdt.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Parameters__c</fullName>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Priority__c</fullName>
        <label>Priority</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityOpenInterfaceClassName__c</fullName>
        <description>VlocityOpenInterface-compliant class for event listener.</description>
        <label>Vlocity Open Interface Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__XOMEvent__c</fullName>
        <description>XOM Event this listener is for</description>
        <label>XOM Event</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>XOM Event Listener</label>
    <pluralLabel>XOM Event Listeners</pluralLabel>
</CustomObject>